tests/ui/dst/issue-90528-unsizing-suggestion-3.stderr
error[E0277]: the trait bound `[u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:13:17
   |
LL |     wants_write([0u8]);
   |     ----------- ^^^^^ the trait `Write` is not implemented for `[u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: convert the array to a `&mut [u8]` slice instead
   |
LL |     wants_write(&mut [0u8][..]);
   |                 ++++      ++++

error[E0277]: the trait bound `&mut [u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:15:17
   |
LL |     wants_write(&mut [0u8]);
   |     ----------- ^^^^^^^^^^ the trait `Write` is not implemented for `&mut [u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: convert the array to a `&mut [u8]` slice instead
   |
LL |     wants_write(&mut [0u8][..]);
   |                           ++++

error[E0277]: the trait bound `&[u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:18:17
   |
LL |     wants_write(&[0u8]);
   |     ----------- ^^^^^^ the trait `Write` is not implemented for `&[u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`

error[E0277]: the trait bound `&[u8]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:20:17
   |
LL |     wants_write(&[0u8][..]);
   |     ----------- ^^^^^^^^^^ the trait `Write` is not implemented for `&[u8]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: consider changing this borrow's mutability
   |
LL |     wants_write(&mut [0u8][..]);
   |                  +++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
